# weave

./: .gitignore  CMakeLists.txt
.cache/clangd/index/: glad.c.13A45300D31624D0.idx  glad.h.EB1D33CE9B00CB00.idx  glfw3.h.B7D53036BA870943.idx  khrplatform.h.65089494AFD89FE7.idx  main.cpp.292AFD6E79ED158C.idx  shader.h.449F5DB0D7B1EAAF.idx
assets/shaders/: color.frag.glsl  diag.vert.glsl
include/: shader.h
include/glad/: glad.h
res/shaders/: color.frag.glsl  diag.vert.glsl
src/: CMakeLists.txt  Common.h  Engine.cpp  Main.cpp  main.cpp
src/Core/: Camera.h  Engine.cpp  Engine.h  GL.cpp  GL.h
src/Renderer/: Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h
